--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -328,11 +328,15 @@ section {
 /* Footer */
 
 footer {
-  width:170px;
+/* width:170px;
   float:left;
   position:fixed;
   bottom:10px;
-	padding-left: 50px;
+  padding-left: 50px; */
+	
+  width: 170px;
+  bottom: -11px;
+  padding-left: 1049px;
 }
 
 @media print, screen and (max-width: 960px) {
